Fix T44984: wrong texture clamping when applying saturation > 1.0

Applying saturation > 1.0 in HSV space easily leads to negative values in RGB space,
so we have to clamp again...